--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "cross-env": "^7.0.2",
+    "cross-env": "^7.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
